--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "express": "^4.21.2",
     "express-session": "^1.18.1"
   },
